Fixed modal overflow and nav spacing

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -3,9 +3,11 @@ CSS for repeating elements*/
 
 #nav {
   display: grid;
-  grid-template-columns: auto 100px 200px auto;
+  width: 500px;
+  margin: 0 auto;
+  grid-template-columns: 100px 40% auto;
   grid-template-rows: repeat(4, auto);
-  grid-gap: 20px;
+  grid-gap: 0px 10px;
   justify-items: left;
   align-items: center;
 }
@@ -26,22 +28,22 @@ CSS for repeating elements*/
 }
 
 #faq_button {
-  grid-column-start: 3;
+  grid-column-start: 2;
   grid-row-start: 1;
 }
 
 #events_button {
-  grid-column-start: 3;
+  grid-column-start: 2;
   grid-row-start: 2;
 }
 
 #bios_button {
-  grid-column-start: 3;
+  grid-column-start: 2;
   grid-row-start: 3;
 }
 
 #join_button {
-  grid-column-start: 3;
+  grid-column-start: 2;
   grid-row-start: 4;
 }
 
@@ -49,29 +51,26 @@ CSS for repeating elements*/
   margin: auto;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   visibility: hidden;
 }
 
 #faq_sword {
-  grid-column-start: 2;
+  grid-column-start: 1;
   grid-row-start: 1;
 }
 
 #events_sword {
-  grid-column-start: 2;
+  grid-column-start: 1;
   grid-row-start: 2;
 }
 
 #bios_sword {
-  grid-column-start: 2;
+  grid-column-start: 1;
   grid-row-start: 3;
 }
 
 #join_sword {
-  grid-column-start: 2;
+  grid-column-start: 1;
   grid-row-start: 4;
 }
 
@@ -81,9 +80,11 @@ CSS for repeating elements*/
   left: 40px;
   right: 40px;
   bottom: 40px;
-  background: #212529 !important;
+  padding: 20px 20px 20px 20px;
+  overflow-y: auto;
+  background: #060606;
   border-radius: 0% !important;
-  border: 4px solid #212529 !important;
+  border: 4px solid #060606;
   box-shadow: inset 4px 4px white, inset -4px -4px white;
 }
 
